# slopwars

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: deploy.yml  release-desktop.yml
apps/desktop/: main.js  package.json  sign-adhoc.mjs  tsconfig.json  updater.js
apps/editor/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/editor/host/: bridge.ts  files.ts  mcp.ts  plugin.ts  polyhaven.ts  (+1 more)
apps/editor/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/editor/src-tauri/capabilities/: default.json
apps/editor/src-tauri/icons/: icon.icns
apps/editor/src-tauri/src/: catalog.rs  commands.rs  lib.rs  main.rs  mcp.rs  root.rs
apps/game/: index.html  package.json  tsconfig.json  vite.config.ts
apps/mcp/: README.md  package.json  server.mjs
maps/: koi.json  neon.json  office.json  waterfall.json
public/: manifest.webmanifest  sw.js
scripts/: add-anims-to-operator.py  consolidate-model-textures.mjs  export-maps.mjs  gen-fx-sprites.mjs  geometry-only-models.mjs  migrate-maps.mjs  migrate-model-materials.mjs  migrate-props.mjs  mixamo-to-operator.py  vendor-physx.mjs
src/: assets.ts  audio.ts  hud.ts  main.ts  map.ts  model-manifest.ts  models.ts  modes.ts  nades.ts  net.ts  objects.ts  player.ts  remote.ts  settings.ts  textures.ts  touch.ts  types.ts  weapons.ts
src/maps/: index.ts  koi.ts  neon.ts  office.ts  overgrowth.ts  schema.ts  waterfall.ts
(+384 files in other folders)
