[package]
name = "slopwars-editor"
version = "1.0.0"
description = "SlopWars map editor"
authors = ["SlopWars"]
edition = "2021"
rust-version = "1.77"

[lib]
# The Tauri application logic lives in the library so it can be shared with the
# (future) mobile entry points; `main.rs` is a thin wrapper.
name = "slopwars_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
base64 = "0.22"
tiny_http = "0.12"

[features]
# by default Tauri runs in production mode; `cargo tauri dev` toggles this.
custom-protocol = ["tauri/custom-protocol"]
